# volumetric-display

./: .bazelrc  .pre-commit-config.yaml  3d_snake.py  BUILD  Cargo.toml  DisplayConfig.h  MODULE.bazel  README.md  VolumetricDisplay.cpp  VolumetricDisplay.h  WORKSPACE  artnet.py  color_correction.h  color_palette.py  conference_scene.py  control_port.py  control_port_rust.py  control_port_test.py  controller_simulator_lib.py  curtain_configs.json  curtain_sequence.json  data_center_layers_scene.py  data_center_layers_scene_gpu.py  game_cube_config_nlk.json  game_scene.py  gapped_2_cube_config_nlk.json  gen_scatter_gather_config.py  generate_diagram.py  helix_redundancy_scene.py  helix_redundancy_scene_gpu.py  main.cpp  neurons_scene.py  neurons_scene_gpu.py  nlk_config.json  rain_computation_scene.py  sender.py  sender_monitor_rust.py  sim_config.json  sim_config_4.json  sim_config_updated_4.json  (+8 more)
.github/workflows/: test.yaml
games/: blinky_game.py  pong_game.py  snake_game.py  space_invaders_game.py  sphere_shooter_game.py
games/util/: BUILD  base_game.py  game_util.py  sound_manager.py
games/util/menu_animations/: __init__.py  animation_manager.py  base.py  cube_animation.py  plane_animation.py  rainbow_animation.py  sphere_animation.py  wave_animation.py
infra/nginx/: BUILD  midnight_walk.conf  mime.types
infra/nginx/certs/: midnight.local.crt  midnight.local.key
mapper/: BUILD
midnight_walk/: BUILD  DOCKER.md  alembic.ini  build_server_image.sh  create_dev_cert.sh  database.py  deploy_heroku.sh  server.py
midnight_walk/alembic/: README  env.py
midnight_walk/alembic/versions/: 20251125_01_add_spirit_tables.py  20251125_02_add_beacon_state.py  20251125_02_add_beacon_status.py  __init__.py
midnight_walk/docker/: Dockerfile  entrypoint.sh
midnight_walk/templates/: admin.html  admin_beacons.html  admin_data.html  admin_login.html  admin_nfc_writer.html  admin_spirits.html  found_no_spirit.html  mobile.html  spirit.html
resources/: icon.cpp  icon_helper_osx.cpp
scripts/: create_dev_cert.sh
sounds/: BUILD  beep.ck  bonk.ck  chuck_render.bzl  click.ck  crunch.ck  ding.ck  keepalive.ck  pew.ck  pop.ck  sound_server.ck  sound_server_launcher.py  swoosh.ck  thud.ck  warble.ck  woosh.ck
src/: control_port.rs  lib.rs  web_monitor.rs
src/artnet/: lib.rs
src/control_port/: BUILD  Cargo.toml  control_port.rs  lib.rs  web_monitor.rs
src/sender_monitor/: BUILD  lib.rs  sender_monitor.rs  web_monitor.rs
static/: debug_dashboard.html
tests/: control_port_integration_test.py  real_control_port_integration_test.py
touchdesigner/: donut.toe  volumetric_prototyping.toe
touchdesigner/components/: 2d_to_3d.tox  3d_to_2d.tox  anamorphic_text.tox  block_text.tox  marquee.tox  shape_selector.tox  volumetric.tox  volumetric_artnet_out.tox
